--- a/surveyTools/project.config.json
+++ b/surveyTools/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wx0a3f035ee4b9c3f9",
+	"appid": "wx949e43813899c7a8",
 	"projectname": "survey_tool",
 	"debugOptions": {
 		"hidedInDevtools": []
